--- a/Website/About.html
+++ b/Website/About.html
@@ -16,11 +16,11 @@
         <nav>
             <header>
                 <div class="logo-image">
-                    <a href="test.html"><img src="/Images/Logo.png" alt="logo" class="img-fluid"></a>
+                    <a href="index.html"><img src="/Images/Logo.png" alt="logo" class="img-fluid"></a>
                 </div>
                 <div class="nav-links" id="navLinks">
                     <ul class="menu">
-                        <li><a href="test.html"> Home </a></li>
+                        <li><a href="index.html"> Home </a></li>
                         <li><a href="About.html"> About </a> </li>
                         <li><a href="Menu.html"> Menu </a> </li>
                         <li><a href="Book.html"> Book Table </a> </li>
@@ -28,11 +28,9 @@
                 </div>
                 <div class="icons1">
                     <div class="cart">
-                        <a href="Cart.html">
                             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
                             </svg>
-                         </a>
                     </div>           
                     <div class="search">
                         <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
