Fix image links

--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Images/Logo.png" type="image/gif">
+    <link rel="icon" href="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" type="image/gif">
     <link rel="stylesheet" href="About.css">
     <title>About</title>
     <!-- Bootstap Links -->
@@ -16,7 +16,7 @@
         <nav>
             <header>
                 <div class="logo-image">
-                    <a href="index.html"><img src="/Images/Logo.png" alt="logo" class="img-fluid"></a>
+                    <a href="index.html"><img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" alt="logo" class="img-fluid"></a>
                 </div>
                 <div class="nav-links" id="navLinks">
                     <ul class="menu">
@@ -44,7 +44,7 @@
         <div class="about-section">
             <div class="container">
                 <h1><strong>About Us</strong></h1>
-                <img src="/Images/TNK Technology Logo.png" alt="tnklogo" class="tnklogo">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/TNK Technology Logo.png" alt="tnklogo" class="tnklogo">
                 <p><strong>Elite Café</strong> is a proud venture of <strong>TNK Technologies Ltd.</strong></p>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
