--- a/Book.html
+++ b/Book.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Images/Logo.png" type="image/gif">
+    <link rel="icon" href="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" type="image/gif">
     <link rel="stylesheet" href="Book.css">
     <title>Book Table</title>
     <!-- Font Awesome link -->
@@ -15,7 +15,7 @@
         <nav>
             <header>
                 <div class="logo-image">
-                    <a href="index.html"><img src="/Images/Logo.png" alt="logo" class="img-fluid"></a>
+                    <a href="index.html"><img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" alt="logo" class="img-fluid"></a>
                 </div>
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
@@ -43,7 +43,7 @@
 
         <section class="book_section">
             <div class="book_bg_box">
-                <img src="/Images/image3.jpg" alt="image">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/image3.jpg" alt="image">
             </div>
             <div class="container">
                 <h2>Book Table</h2>
