--- a/Menu.html
+++ b/Menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Images/Logo.png" type="image/gif">
+    <link rel="icon" href="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" type="image/gif">
     <link rel="stylesheet" href="Menu.css">
     <title>Menu</title>
     <!-- Font Awesome link -->
@@ -15,7 +15,7 @@
         <nav>
             <header>
                 <div class="logo-image">
-                    <a href="index.html"><img src="/Images/Logo.png" alt="logo" class="img-fluid"></a>
+                    <a href="index.html"><img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" alt="logo" class="img-fluid"></a>
                 </div>
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
@@ -50,211 +50,211 @@
     <section class="menu_section">
         <div class="menu-container">
             <div class="menu1">
-                <img src="/Images/expresso2.jpg" alt="expresso2">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/expresso2.jpg" alt="expresso2">
                 <h3>Expresso</h3>
                 <p>£1.95</p>
                 <button class="addtocart" onclick="addtocart('Expresso', 1.95)">Add to Cart</button>
             </div>
             <div class="menu2">
-                <img src="/Images/americano.jpg" alt="americano">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/americano.jpg" alt="americano">
                 <h3>Americano</h3>
                 <p>£2.50</p>
                 <button class="addtocart" onclick="addtocart('Americano', 2.50)">Add to Cart</button>
             </div>
             <div class="menu3">
-                <img src="/Images/mochacoffee.jpg" alt="mocha">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/mochacoffee.jpg" alt="mocha">
                 <h3>Mocha</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Mocha', 3.00)">Add to Cart</button>
             </div>
             <div class="menu4">
-                <img src="/Images/cappuccino.webp" alt="cappuncino">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/cappuccino.webp" alt="cappuncino">
                 <h3>Cappuncino</h3>
                 <p>£2.70</p>
                 <button class="addtocart" onclick="addtocart('Cappuncino', 2.70)">Add to Cart</button>
             </div>
             <div class="menu5">
-                <img src="/Images/latte.jpg" alt="latte">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/latte.jpg" alt="latte">
                 <h3>Latte</h3>
                 <p>£2.70</p>
                 <button class="addtocart" onclick="addtocart('Latte', 2.70)">Add to Cart</button>
             </div>
             <div class="menu6">
-                <img src="/Images/flatwhite.jpeg" alt="flatwhite">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/flatwhite.jpeg" alt="flatwhite">
                 <h3>Flat White</h3>
                 <p>£2.90</p>
                 <button class="addtocart" onclick="addtocart('Flat White', 2.90)">Add to Cart</button>
             </div>
             <div class="menu7">
-                <img src="/Images/hotchocolate2.jpg" alt="hotchocolate2">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/hotchocolate2.jpg" alt="hotchocolate2">
                 <h3>Hot Chocolate</h3>
                 <p>£2.90</p>
                 <button class="addtocart" onclick="addtocart('Hot Chocolate', 2.90)">Add to Cart</button>
             </div>
             <div class="menu8">
-                <img src="/Images/whitehotchocolate.webp" alt="whitehotchocolate">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/whitehotchocolate.webp" alt="whitehotchocolate">
                 <h3>White Hot Chocolate</h3>
                 <p>£2.90</p>
                 <button class="addtocart" onclick="addtocart('White Hot Chocolate', 2.90)">Add to Cart</button>
             </div>
             <div class="menu9">
-                <img src="/Images/chailatte.jpg" alt="chailatte">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/chailatte.jpg" alt="chailatte">
                 <h3>Chai Latte</h3>
                 <p>£2.90</p>
                 <button class="addtocart" onclick="addtocart('Chai Latte', 2.90)">Add to Cart</button>
             </div>
             <div class="menu10">
-                <img src="/Images/saltedcaramelfrappe.jpg" alt="saltedcaramelfrappe">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/saltedcaramelfrappe.jpg" alt="saltedcaramelfrappe">
                 <h3>Salted Caramel Frappé</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Salted Caramel Frappé', 3.00)">Add to Cart</button>
             </div>
             <div class="menu11">
-                <img src="/Images/ChocolateChipFrappe.jpg" alt="chocolatechipfrappe">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/ChocolateChipFrappe.jpg" alt="chocolatechipfrappe">
                 <h3>Chocolate Chip Frappé</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Chocolate Chip Frappé', 3.00)">Add to Cart</button>
             </div>
             <div class="menu12">
-                <img src="/Images/icedlatte.webp" alt="icedlatte">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/icedlatte.webp" alt="icedlatte">
                 <h3>Iced Latte</h3>
                 <p>£2.80</p>
                 <button class="addtocart" onclick="addtocart('Iced Latte', 2.80)">Add to Cart</button>
             </div>
             <div class="menu13">
-                <img src="/Images/icedcappuccino.webp" alt="icedcappuccino">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/icedcappuccino.webp" alt="icedcappuccino">
                 <h3>Iced Cappuncino</h3>
                 <p>£2.80</p>
                 <button class="addtocart" onclick="addtocart('Iced Cappuncino', 2.80)">Add to Cart</button>
             </div>
             <div class="menu14">
-                <img src="/Images/icedchailatte.jpg" alt="icedchailatte">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/icedchailatte.jpg" alt="icedchailatte">
                 <h3>Iced Chai Latte</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Iced Chai Latte', 3.00)">Add to Cart</button>
             </div>
             <div class="menu15">
-                <img src="/Images/icedblackamericano.jpg" alt="icedblackamericano">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/icedblackamericano.jpg" alt="icedblackamericano">
                 <h3>Iced Black Americano</h3>
                 <p>£2.90</p>
                 <button class="addtocart" onclick="addtocart('Iced Black Americano', 2.90)">Add to Cart</button>
             </div>
             <div class="menu16">
-                <img src="/Images/icedmocha.jpg" alt="icedmocha">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/icedmocha.jpg" alt="icedmocha">
                 <h3>Iced Mocha</h3>
                 <p>£3.50</p>
                 <button class="addtocart" onclick="addtocart('Iced Mocha', 3.50)">Add to Cart</button>
             </div>
             <div class="menu17">
-                <img src="/Images/englishbreakfasttea.jpeg" alt="englishbreakfasttea">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/englishbreakfasttea.jpeg" alt="englishbreakfasttea">
                 <h3>English Breakfast Tea</h3>
                 <p>£2.00</p>
                 <button class="addtocart" onclick="addtocart('English Breakfast Tea', 2.00)">Add to Cart</button>
             </div>
             <div class="menu18">
-                <img src="/Images/croissant.webp" alt="croissant">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/croissant.webp" alt="croissant">
                 <h3>Croissant</h3>
                 <p>£1.50</p>
                 <button class="addtocart" onclick="addtocart('Croissant', 1.50)">Add to Cart</button>
             </div>
             <div class="menu19">
-                <img src="/Images/chocolatecroissant.jpg" alt="chocolatecroissant">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/chocolatecroissant.jpg" alt="chocolatecroissant">
                 <h3>Chocolate Croissant</h3>
                 <p>£1.55</p>
                 <button class="addtocart" onclick="addtocart('Chocolate Croissant', 1.55)">Add to Cart</button>
             </div>
             <div class="menu20">
-                <img src="/Images/blueberrymuffin.jpg" alt="blueberrymuffin">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/blueberrymuffin.jpg" alt="blueberrymuffin">
                 <h3>Blueberry Muffin</h3>
                 <p>£1.50</p>
                 <button class="addtocart" onclick="addtocart('Blueberry Muffin', 1.50)">Add to Cart</button>
             </div>
             <div class="menu21">
-                <img src="/Images/chocolatechipmuffin.jpg" alt="chocolatechipmuffin">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/chocolatechipmuffin.jpg" alt="chocolatechipmuffin">
                 <h3>Chocolate Chip Muffin</h3>
                 <p>£1.50</p>
                 <button class="addtocart" onclick="addtocart('Chocolate Chip Muffin', 1.50)">Add to Cart</button>
             </div>
             <div class="menu22">
-                <img src="/Images/chocolatemuffin.jpg" alt="chocolatemuffin">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/chocolatemuffin.jpg" alt="chocolatemuffin">
                 <h3>Chocolate Muffin</h3>
                 <p>£1.50</p>
                 <button class="addtocart" onclick="addtocart('Chocolate Muffin', 1.50)">Add to Cart</button>
             </div>
             <div class="menu23">
-                <img src="/Images/chocolatechipcookie.jpg" alt="chocolatechipcookie">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/chocolatechipcookie.jpg" alt="chocolatechipcookie">
                 <h3>Chocolate Chip Cookie</h3>
                 <p>£1.00</p>
                 <button class="addtocart" onclick="addtocart('Chocolate Chip Cookie', 1.00)">Add to Cart</button>
             </div>
             <div class="menu24">
-                <img src="/Images/doublechocolatechipcookie.jpg" alt="doublechocolatechipcookie">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/doublechocolatechipcookie.jpg" alt="doublechocolatechipcookie">
                 <h3>Double Chocolate Chip Cookie</h3>
                 <p>£1.00</p>
                 <button class="addtocart" onclick="addtocart('Double Chocolate Chip Cookie', 1.00)">Add to Cart</button>
             </div>
             <div class="menu25">
-                <img src="/Images/brownies.jpg" alt="brownies">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/brownies.jpg" alt="brownies">
                 <h3>Brownies</h3>
                 <p>£2.00</p>
                 <button class="addtocart" onclick="addtocart('Brownies', 2.00)">Add to Cart</button>
             </div>
             <div class="menu26">
-                <img src="/Images/avocadotoast.jpg" alt="avocadotoast">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/avocadotoast.jpg" alt="avocadotoast">
                 <h3>Avocado Toast</h3>
                 <p>£2.00</p>
                 <button class="addtocart" onclick="addtocart('Avocado Toast', 2.00)">Add to Cart</button>
             </div>
             <div class="menu27">
-                <img src="/Images/BLTsandwich.jpg" alt="BLT">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/BLTsandwich.jpg" alt="BLT">
                 <h3>BLT Sandwich</h3>
                 <p>£2.50</p>
                 <button class="addtocart" onclick="addtocart('BLT Sandwich', 2.50)">Add to Cart</button>
             </div>
             <div class="menu28">
-                <img src="/Images/bagelsandwich.jpg" alt="bagelsandwich">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/bagelsandwich.jpg" alt="bagelsandwich">
                 <h3>Bagel Sandwich</h3>
                 <p>£2.50</p>
                 <button class="addtocart" onclick="addtocart('Bagel Sandwich', 2.50)">Add to Cart</button>
             </div>
             <div class="menu29">
-                <img src="/Images/grilledcheesesandwich.jpg" alt="grilledcheesesandwich">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/grilledcheesesandwich.jpg" alt="grilledcheesesandwich">
                 <h3>Grilled Cheese Sandwich</h3>
                 <p>£2.50</p>
                 <button class="addtocart" onclick="addtocart('Grilled Cheese Sandwich', 2.50)">Add to Cart</button>
             </div>
             <div class="menu30">
-                <img src="/Images/blueberrycheescake.jpg" alt="blueberrycheescake">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/blueberrycheescake.jpg" alt="blueberrycheescake">
                 <h3>Blueberry Cheesecake</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Blueberry Cheesecake', 3.00)">Add to Cart</button>
             </div>
             <div class="menu31">
-                <img src="/Images/strawberrycheesecake.jpg" alt="strawberrycheesecake">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/strawberrycheesecake.jpg" alt="strawberrycheesecake">
                 <h3>Strawberry Cheesecake</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Strawberry Cheesecake', 3.00)">Add to Cart</button>
             </div>
             <div class="menu32">
-                <img src="/Images/tiramisu.webp" alt="tiramisu">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/tiramisu.webp" alt="tiramisu">
                 <h3>Tiramisu</h3>
                 <p>£3.50</p>
                 <button class="addtocart" onclick="addtocart('Tiramisu', 3.50)">Add to Cart</button>
             </div>
             <div class="menu33">
-                <img src="/Images/chocolatecake.jpeg" alt="chocolatecake">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/chocolatecake.jpeg" alt="chocolatecake">
                 <h3>Chocolate Cake</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Chocolate Cake', 3.00)">Add to Cart</button>
             </div>
             <div class="menu34">
-                <img src="/Images/carrotcake2.jpg" alt="carrotcake">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/carrotcake2.jpg" alt="carrotcake">
                 <h3>Carrot Cake</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Carrot Cake', 3.00)">Add to Cart</button>
             </div>
             <div class="menu35">
-                <img src="/Images/redvelvetcake.webp" alt="redvelvetcake">
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/redvelvetcake.webp" alt="redvelvetcake">
                 <h3>Red Velvet Cake</h3>
                 <p>£3.00</p>
                 <button class="addtocart" onclick="addtocart('Red Velvet Cake', 3.00)">Add to Cart</button>
