--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <header>
                 <div class="logo-image">
-                    <a href="index.html"><img src="/Images/Logo.png" alt="logo"></a>
+                    <a href="index.html"><img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/Logo.png" alt="logo"></a>
                 </div>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
@@ -65,19 +65,19 @@
         <div id="popular-menu-items" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/Images/expresso1.jpg" class="d-block" alt="Espresso">
+                    <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/expresso1.jpg" class="d-block" alt="Espresso">
                     <h4>Espresso</h4>
                 </div>
                 <div class="carousel-item">
-                    <img src="/Images/croissant1.avif" class="d-block" alt="Chocolate Croissant">
+                    <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/croissant1.avif" class="d-block" alt="Chocolate Croissant">
                     <h4>Chocolate Croissant</h4>
                 </div>
                 <div class="carousel-item">
-                    <img src="/Images/hotchocolate1.jpg" class="d-block" alt="Hot Chocolate">
+                    <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/hotchocolate1.jpg" class="d-block" alt="Hot Chocolate">
                     <h4>Hot Chocolate</h4>
                 </div>
                 <div class="carousel-item">
-                    <img src="/Images/carrotcake1.jpg" class="d-block" alt="Carrot Cake">
+                    <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/carrotcake1.jpg" class="d-block" alt="Carrot Cake">
                     <h4>Carrot Cake</h4>
                 </div>
             </div>
@@ -99,19 +99,19 @@
         <p>You can also order through these delivery apps.</p>
         <div class="options">
             <div class="option1">
-                <img src="/Images/ubereatslogo.webp" alt="ubereatslogo" class="img-fluid"></a>
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/ubereatslogo.webp" alt="ubereatslogo" class="img-fluid"></a>
                 <h4>Uber Eats</h4>
                 <p>Start your order via the Uber Eats app or website.</p>
                 <a href="https://www.ubereats.com/"><button type="button" class="order-now-btn">Order Now</button></a>
             </div>
             <div class="option2">
-                <img src="/Images/deliveroologo.png" alt="deliveroologo" class="img-fluid"></a>
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/deliveroologo.png" alt="deliveroologo" class="img-fluid"></a>
                 <h4>Deliveroo</h4>
                 <p>Start your order via the Deliveroo app or website.</p>
                 <a href="https://deliveroo.co.uk/"><button type="button" class="order-now-btn">Order Now</button></a>
             </div>
             <div class="option3">
-                <img src="/Images/justeatlogo.jpg" alt="justeatlogo" class="img-fluid"></a>
+                <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/justeatlogo.jpg" alt="justeatlogo" class="img-fluid"></a>
                 <h4>Just Eat</h4>
                 <p>Start your order via the Just Eat app or website.</p>
                 <a href="https://www.just-eat.co.uk/"><button type="button" class="order-now-btn">Order Now</button></a>
