Make carousel links go to menu

--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
         <h1>Our Popular Menu Items</h1>
         <div id="popular-menu-items" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <a class="carousel-item active" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/expresso1.jpg" class="d-block" alt="Espresso">
                     <h4>Espresso</h4>
-                </div>
-                <div class="carousel-item">
+                </a>
+                <a class="carousel-item" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/croissant1.avif" class="d-block" alt="Chocolate Croissant">
                     <h4>Chocolate Croissant</h4>
-                </div>
-                <div class="carousel-item">
+                </a>
+                <a class="carousel-item" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/hotchocolate1.jpg" class="d-block" alt="Hot Chocolate">
                     <h4>Hot Chocolate</h4>
-                </div>
-                <div class="carousel-item">
+                </a>
+                <a class="carousel-item" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/carrotcake1.jpg" class="d-block" alt="Carrot Cake">
                     <h4>Carrot Cake</h4>
-                </div>
+                </a>
             </div>
             <!-- Carousel Controls -->
             <button class="carousel-control-prev" type="button" data-bs-target="#popular-menu-items" data-bs-slide="prev">
