Remove link styles on carousel

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/expresso1.jpg" class="d-block" alt="Espresso">
                     <h4>Espresso</h4>
                 </a>
-                <a class="carousel-item" href="Menu.html">
+                <a class="carousel-item no-link-styles" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/croissant1.avif" class="d-block" alt="Chocolate Croissant">
                     <h4>Chocolate Croissant</h4>
                 </a>
-                <a class="carousel-item" href="Menu.html">
+                <a class="carousel-item no-link-styles" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/hotchocolate1.jpg" class="d-block" alt="Hot Chocolate">
                     <h4>Hot Chocolate</h4>
                 </a>
-                <a class="carousel-item" href="Menu.html">
+                <a class="carousel-item no-link-styles" href="Menu.html">
                     <img src="https://pravalika234.github.io/Elite-Cafe---Assignment/Images/carrotcake1.jpg" class="d-block" alt="Carrot Cake">
                     <h4>Carrot Cake</h4>
                 </a>
